// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label With Modal Element renders a label with modal 1`] = `
<div
  className="tribe-editor__labeled-item tribe-editor__label-with-modal"
>
  <span
    className="tribe-editor__labeled-item__label"
  />
  <div
    className="tribe-editor__modal-button tribe-editor__label-with-modal__modal-button"
  >
    <button
      className="tribe-editor__button tribe-editor__modal-button__button"
      onClick={[Function]}
      type="button"
    />
  </div>
</div>
`;

exports[`Label With Modal Element renders a label with modal with class 1`] = `
<div
  className="tribe-editor__labeled-item tribe-editor__label-with-modal test-class"
>
  <span
    className="tribe-editor__labeled-item__label"
  />
  <div
    className="tribe-editor__modal-button tribe-editor__label-with-modal__modal-button"
  >
    <button
      className="tribe-editor__button tribe-editor__modal-button__button"
      onClick={[Function]}
      type="button"
    />
  </div>
</div>
`;

exports[`Label With Modal Element renders a label with modal with label 1`] = `
<div
  className="tribe-editor__labeled-item tribe-editor__label-with-modal"
>
  <span
    className="tribe-editor__labeled-item__label"
  >
    test label
  </span>
  <div
    className="tribe-editor__modal-button tribe-editor__label-with-modal__modal-button"
  >
    <button
      className="tribe-editor__button tribe-editor__modal-button__button"
      onClick={[Function]}
      type="button"
    />
  </div>
</div>
`;
